# transparent-security

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
analytics/: Readme.md
analytics/ElasticSearch/: ddos_attack_data_mapping.json  ddos_attack_pipeline.json
analytics/OpenDistroElasticSearch/: UDP Data Mapping and Parsing.md  anomaly_detector_config.json  ddos_detection_and_mitigation_pipeline.md  packet_template-7.x.sh  udp_data_mapping_and_parsing_pipeline.md  udp_data_parsing.json  udp_data_parsing_pipeline.sh
automation/env-build/: aws-inst.tf  aws-security.tf  outputs.tf  variables.tf
ci/: README.md
ci/env-build/: README.md  aws-inst.tf  aws-security.tf  outputs.tf  variables.tf
conf/cl_hw_lab_trial/: tofino-sim-topology-single-switch.yaml  tofino-sim-topology.yaml  transparent-security-single-switch.yaml  transparent-security.yaml
docs/: BUILD.md  SIDDHI_AE_SETUP.md  env-build-example.tfvars  example-local-inventory.ini  example.tfvars  mininet-example.tfvars
docs/ae/: SIDDHI_AE_SETUP.md
docs/env_build/: CREATE_AUTOMATION_IMAGES.md
docs/int_header/: INT_header.md  README.md  int.lua
docs/telemetry_report/: telemetry_report.md
docs/terraform/: automation-base.example.tfvars  siddhi-maven-build.example.tfvars  tofino-build.example.tfvars  tofino-int.example.tfvars
docs/tofino/: automation.md  (+1 more)
examples/: kafka-trpt-drop-clear.yaml  kafka.yaml  test-http.yaml  test-networking.yaml  trpt-to-kafka.yaml
snaps-hcp/: Readme.md
trans_sec/: consts.py  exceptions.py  switch.py
(+374 files in other folders)
